# annee_bissextile_api

./: Dockerfile  README.md  pyproject.toml
anneebissextile/: settings.py  urls.py
bissextile/: apps.py  is_bissextile.py  models.py  serializers.py  tests.py  utils.py  views.py
bissextile/migrations/: 0001_initial.py  0002_alter_bissextile_endpoint_utilise.py  0003_alter_bissextile_annee_alter_bissextile_annee_debut_and_more.py  0004_alter_bissextile_annee.py  0005_bissextile_annees_bissextiles_and_more.py
